# rss-service

./: Cargo.toml
src/: api.rs  main.rs
src/handlers/: crunchyroll.rs  health_handlers.rs  mod.rs  showrss_info.rs
src/models/: health_models.rs  mod.rs
src/routes/: crunchyroll.rs  health.rs  mod.rs  showrss_info.rs
